--- a/index.html
+++ b/index.html
@@ -48,16 +48,44 @@
     <div id="skillstext" style="max-height: 600px;" class="textcontent">
         <img src="flowchart.png" alt="Flowchart for solution" style="display: block; margin: auto;"></img>
     </div>
-</div><div id="workexp" class="tabcontent">
-    <div id="workexptitle" class="tabtitle collapsible active">EXPERIMENTS<div class="expand"></div></div>
-    <div id="workexptext" style="max-height: 409px;" class="textcontent">
-        <span id="trcontrol" class="box">TextRank Summarizer</span><span id="luhncontrol" class="box">LUHN Summarizer</span><span id="lsacontrol" class="box">LSA Summarizer</span><span id="pgncontrol" class="box">Pointer Generator Networks</span>
-        <div id="textrank" style="overflow: hidden; display:none; ">RESULTS OF TEXTRANK</div>
-        <div id="luhn" style="overflow: hidden; display: none;">RESULTS OF LUHN</div>
-        <div id="lsa" style="overflow: hidden; display: none;">RESULTS OF LSA</div>
-        <div id="pgn" style="overflow: hidden; display: none;">RESULTS OF PGN</div>
+</div>
+
+<div id="workexp" class="tabcontent">
+<div id="workexptitle" class="tabtitle collapsible active">
+    EXPERIMENTS
+    <div class="expand"></div>
+</div>    
+<div id="workexptext" style="max-height: 2000px;" class="textcontent">
+<h4><u>EXTRACTIVE SUMMARIZATION</u></h4>
+<div id="textrankalg">
+    <span style="display:block"><u>TEXTRANK ALGORITHM</u></span>
+    <br/>
+    <img src="page_rank.png" style="display: block; margin: auto;"></img>
+</div>
+<br/>
+<div id="lsaalg">
+    <span style="display:block"><u>LATENT SEMANTIC ANALYSIS ALGORITHM</u></span>
+    <br/>
+    <img src="lsa.png" style="display: block; margin: auto;"></img>
+</div>
+<br/>
+<div id="luhnalg">
+    <span style="display:block"><u>LUHN's ALGORITHM</u></span>
+    <br/>
+    <img src="luhn.png" style="display: block; margin: auto;"></img>
+</div>
+<br/><br/>
+<h4><u>ABSTRACTIVE SUMMARIZATION</u></h4>
+<div id="pgnalg">
+    <span style="display:block"><u>POINTER GENERATOR ALGORITHM</u></span>
+    <br/>
+    <img src="pgn.png" style="display: block; margin: auto;"></img>
+</div>
+    
 </div>
 </div>
+
+
 <div id="projects" class="tabcontent">
         <div id="projectstitle" class="tabtitle collapsible active">RESULTS<div class="expand"></div>
         <div id="projectstext" style="max-height: 409px;" class="textcontent">
