--- a/index.html
+++ b/index.html
@@ -314,8 +314,10 @@ we have also shown that alternating maximization can be employed to come o -lrb-
     <tr>
         <td>
     <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo9">Paper</button>
-        <div id="demo9" class="collapse"><font color="black">
-        CCC
+        <div id="demo9" class="collapse">
+            <font color="black">
+        
+                    <a href = "https://github.com/WING-NUS/scisumm-corpus/tree/master/data/Training-Set-2018/C00-2123/Citance_XML"></a>
     </font>
     </div></td>
     <td>&nbsp;
