--- a/index.html
+++ b/index.html
@@ -196,6 +196,7 @@ nevertheless , the search error decreased from 59.3 into 34.0 by alternating the
         <td>
     <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo33">Paper</button>
         <div id="demo33" class="collapse"><font color="black">
+                <a href="https://github.com/WING-NUS/scisumm-corpus/tree/master/data/Training-Set-2018/C00-2123/Citance_XML">PDF</a>
     </font>
     </div></td>
     <td>&nbsp;
@@ -317,7 +318,8 @@ we have also shown that alternating maximization can be employed to come o -lrb-
         <div id="demo9" class="collapse">
             <font color="black">
         
-                    <a href = "https://github.com/WING-NUS/scisumm-corpus/tree/master/data/Training-Set-2018/C00-2123/Citance_XML"></a>
+                    
+                    <a href = "https://github.com/WING-NUS/scisumm-corpus/tree/master/data/Training-Set-2018/C00-2123/Citance_XML">PDF</a>
     </font>
     </div></td>
     <td>&nbsp;
