Images moved to separate folder

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="particles-js">
     </div>
     <div id="userinfobox"><div id="userinfo">
-    <a href="https://www.linkedin.com/in/shyamsubramanian/" target="_blank"><img src="WPI.jpg" id="profilepic"></a>
+    <a href="https://www.linkedin.com/in/shyamsubramanian/" target="_blank"><img src="images/WPI.jpg" id="profilepic"></a>
     
     
 </div><span id="abbr" style="font-size:30px; margin-top:30px;">RPIAN</span></span><div id="info"></div></div>
@@ -49,7 +49,7 @@
 </div><div id="skills" class="tabcontent">
 <div id="skillstitle" class="tabtitle collapsible active">SOLUTION FLOWCHART<div class="expand"></div></div>
 <div id="skillstext" style="max-height: 600px;" class="textcontent">
-    <img src="flowchart.png" alt="Flowchart for solution" style="display: block; margin: auto;"></img>
+    <img src="images/flowchart.png" alt="Flowchart for solution" style="display: block; margin: auto;"></img>
 </div>
 </div>
 
@@ -63,26 +63,26 @@ EXPERIMENTS
 <div id="textrankalg">
 <span style="display:block"><u>TEXTRANK ALGORITHM</u></span>
 <br/>
-<img src="page_rank.png" style="display: block; margin: auto;"></img>
+<img src="images/page_rank.png" style="display: block; margin: auto;"></img>
 </div>
 <br/>
 <div id="lsaalg">
 <span style="display:block"><u>LATENT SEMANTIC ANALYSIS ALGORITHM</u></span>
 <br/>
-<img src="lsa.png" style="display: block; margin: auto;"></img>
+<img src="images/lsa.png" style="display: block; margin: auto;"></img>
 </div>
 <br/>
 <div id="luhnalg">
 <span style="display:block"><u>LUHN's ALGORITHM</u></span>
 <br/>
-<img src="luhn.png" style="display: block; margin: auto;"></img>
+<img src="images/luhn.png" style="display: block; margin: auto;"></img>
 </div>
 <br/><br/>
 <h4><u>ABSTRACTIVE SUMMARIZATION</u></h4>
 <div id="pgnalg">
 <span style="display:block"><u>POINTER GENERATOR ALGORITHM</u></span>
 <br/>
-<img src="pgn.png" style="display: block; margin: auto;"></img>
+<img src="images/pgn.png" style="display: block; margin: auto;"></img>
 </div>
 
 </div>
